# ai-hardware-cryptographer-roadmap

./: .gitignore  .gitmodules  AI-Hardware-Engineer-Roadmap.html  CMU-Robotics-AI-Courses.md  CURRICULUM.md  PURPOSE-ORIENTED-ROADMAP.md  README.md  Roles and Market Analysis.md  mkdocs.yml
.github/workflows/: deploy-docs.yml
Assets/css/: custom.css
Phase 1 - Foundational Knowledge/1. Digital Design Fundamentals/: Guide.md
Phase 1 - Foundational Knowledge/2. Computer Architecture and Hardware/: Guide.md
Phase 1 - Foundational Knowledge/2. Hardware Description Languages (HDLs)/: Guide.md
Phase 1 - Foundational Knowledge/2.5 Computer Architecture/: README.md
Phase 1 - Foundational Knowledge/3. Computer Architecture and Hardware/: Architecture_Guide.md
Phase 1 - Foundational Knowledge/3. Computer Hardware Basics/: Guide.md
Phase 1 - Foundational Knowledge/3. Embedded Systems Basics/: Guide.md
Phase 1 - Foundational Knowledge/3. Operating Systems/: Guide.md
Phase 1 - Foundational Knowledge/4. C++ and Parallel Computing/: Guide.md
Phase 1 - Foundational Knowledge/4. Linux Fundamentals/: Guide.md
Phase 1 - Foundational Knowledge/4. Operating Systems/: Guide.md
Phase 1 - Foundational Knowledge/5. Deep C++ and Parallel computing with CUDA/: Guide.md
Phase 1 - Foundational Knowledge/5. Operating Systems/: Guide.md
Phase 2 - Embedded Systems/2. Embedded Software/: Guide.md
Phase 2 - Xilinx and Embedded Systems/1. Xilinx FPGA Development/: Guide.md
Phase 2 - Xilinx and Embedded Systems/3. Embedded Linux/: Guide.md
Phase 2 - Xilinx and Embedded Systems/4. Communication Protocols (SPI, UART, I2C, CAN)/: Guide.md
Phase 3 - Advanced FPGA and Acceleration/1. Advanced FPGA Design/: Guide.md
Phase 3 - Advanced FPGA and Acceleration/3. OpenCL/: Guide.md
Phase 3 - Advanced FPGA and Acceleration/4. Computer Vision/: Guide.md
Phase 3 - Artificial Intelligence/: CMU-AI-Courses.md  Guide.md
Phase 3 - Artificial Intelligence/1. Neural Networks/: Guide.md
Phase 4 - Track C - ML Compiler and Graph Optimization/: Guide.md
Projects/jetson-llm-runtime/: CMakeLists.txt  README.md
Projects/jetson-llm-runtime/docs/: README.md  architecture.md  build.md  engine.md  gguf.md  jetson-hal.md  kernels.md  memory.md  performance.md  server.md  testing.md
Projects/jetson-llm-runtime/include/: jllm.h  jllm_engine.h  jllm_kernels.h  jllm_memory.h
Projects/jetson-llm-runtime/scripts/: bench.sh  profile.sh  setup_jetson.sh  test_plan.sh
Projects/jetson-llm-runtime/src/: main.cpp  main_server.cpp
Projects/jetson-llm-runtime/src/engine/: decode.cpp  decode.cu  model.cpp  tokenizer.cpp
Projects/jetson-llm-runtime/src/jetson/: sysinfo.cpp
Projects/jetson-llm-runtime/src/kernels/: gemv_q4.cu
Projects/jetson-llm-runtime/src/memory/: budget.cpp  kv_cache.cpp  pool.cpp
Projects/jetson-llm-runtime/src/server/: http_server.cpp
Projects/jetson-llm-runtime/tests/: test_memory.cpp  test_model_load.cpp
(+384 files in other folders)
